--- a/package.json
+++ b/package.json
@@ -3,25 +3,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "browserslist": [
+    ">1%",
+    "last 4 versions",
+    "Firefox ESR",
+    "ie >= 11"
+  ],
   "scripts": {
-    "webpack:client": "webpack --config webpack.client.js --watch",
-    "webpack:server": "webpack --config webpack.server.js --watch",
+    "webpack:client": "webpack --config webpack.client.js --progress",
+    "webpack:server": "webpack --config webpack.server.js --progress",
     "webpack:start": "nodemon --watch build --exec node build/bundle.js",
     "dev": "npm-run-all --parallel webpack:*",
-    "pack:sitecore":"webpack --config webpack.client.js &&  webpack --config webpack.server.js",
-    "pack:app":"webpack --config webpack.clientSC.js && webpack --config webpack.serverSC.js",
+    "pack:sitecore": "webpack --config webpack.client.js &&  webpack --config webpack.server.js",
+    "pack:app": "webpack --config webpack.clientSC.js && webpack --config webpack.serverSC.js",
     "build": "npm-run-all --parallel pack:*"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-flow": "7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@tamm/ui-lib-checkbox": "0.5.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
@@ -30,8 +33,16 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
     "webpack-node-externals": "^1.7.2"
+  },
+  "devDependencies": {
+    "@babel/core": "7.3.3",
+    "@babel/preset-env": "7.3.1",
+    "babel-loader": "8.0.5",
+    "css-loader": "2.1.0",
+    "less-loader": "4.1.0",
+    "style-loader": "0.23.1",
+    "webpack": "4.29.5",
+    "webpack-cli": "^3.3.7"
   }
 }
